--- a/ServerAuth/plugin.yml
+++ b/ServerAuth/plugin.yml
@@ -1,7 +1,7 @@
 name: ServerAuth
 main: ServerAuth\ServerAuth
 version: 3.0
-api: [3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9, 3.0.0-ALPHA10, 3.0.0-ALPHA11, 3.0.0-ALPHA12]
+api: [3.0.0, 3.0.1, 3.0.2, 3.0.3, 3.0.4, 3.0.5, 3.0.6]
 load: STARTUP
 author: EvolSoft
 description: The most advanced authentication plugin for PocketMine-MP.
